--- a/basico/ejercicio-4/style.scss
+++ b/basico/ejercicio-4/style.scss
@@ -18,8 +18,8 @@ main {
 }
 
 article {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+
   img {
     width: 100%;
     height: 100%;
